--- a/physiology.html
+++ b/physiology.html
@@ -1139,6 +1139,20 @@ Answer: <p style="color:white"> The PR segment and SR segment are the only porti
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> D. A pattern of 2 P waves preceding each QRS complex indicates that only every other P wave is conducted through the AV node to the ventricle. Thus, conduction velocity through the AV node must be decreased.</p>
+ Which of the following is the result of an inward Na+ current?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Upstroke of the AP in the SA node</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Upstroke of the AP in Purkinje fibers</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Plateau of the AP in ventricular muscle</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Repolarization of the AP in ventricular muscle</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Repolarization of the AP in the SA node</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> B. The upstroke of the AP in the atria, ventricles, and Purkinje fibers is the result of a fast inward Na+ current. The upstroke of the AP in the SA node is the result of an inward Ca++ current. The plateau of the ventricular AP is the result of a slow inward Ca++ current. Repolarization in all cardiac tissues is the result of an outward K+ current.</p>
   <b>Cardiac Muscle and Cardiac Output</b><br>
   If the ejection fraction increases, there will be a decrease in 
   <form>
@@ -1168,7 +1182,29 @@ An increase in contractility is demonstrated on a Frank-Starling diagram by:
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> An increase in contractility produces an increase in cardiac output for a given end-diastolic volume, or pressure. The Frank-Starling relationship demonstrates the matching of cardiac output with venous return. An increase in contractility (positive inotropic effect) will shift the curve upward.</p>
-
+The following measurements were obtained in a male patient:<br>
+  Central venous pressure: 10mm Hg<br>
+  Heart rate: 70 bpm <br>
+  Systemic arterial [O<sub>2</sub>] <br>
+  Mixed venous [O<sub>2</sub>] <br>
+  Whole body O<sub>2</sub> 
+  What is this patient's cardiac output?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1.65 L/min</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 4.55 L/min</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 5.00 L/min</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 6.25 L/min</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 8.0L/min  </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. Cardiac output is calculated by the Fick principle if whole body oxygen consumption and [O<sub>2</sub>] in the pulmonary artery and pulmonary vein are measured. Mixed venous blood could substitute for a pulmonary artery sample, and peripheral arterial blood could substitute for a pulmonary vein sample. Central venous pressure and heart rate are not needed for this calculation.<Br>
+  Cardiac output = (500mL/min) / (0.24 mL O<sub>2</sub> - 0.16mL O<sub>2</sub>/mL <br>
+  6250 mL/min = 6.25L/min</p>
+  
   <b>Cardiac Cycle</b><br>
  <img src="https://ccnmtl.columbia.edu/projects/heart/exercises/MechPropHeart/Images/fig_02.gif"><br>
   On the graph showing left ventricular volume and pressure, isovolumetric contraction occurs between points <br>
@@ -1244,6 +1280,81 @@ Answer: <p style="color:white"> Stroke volume is the volume ejected from the ven
   <label for="other"> F. filling of the ventricles has fast and slow components </label><br>
 </form> 
 Answer: <p style="color:white"> The second heart sound is associated with closure of the aortic and pulmonic valves. Because the aortic vale closes before the pulmonic valve, the sound can be split by inspiration.</p>
+<img src="WiggersDiagram_1.png"><br>
+  The red curve in the figure represents<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. aortic pressure</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. ventricular pressure</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. atrial pressure</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. ventricular volume</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. left atrial pressure</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. right atrial pressure</label><br>
+</form> 
+Answer: <p style="color:white"> The ECG tracing (green) serves as a reference. The QRS complex marks ventricular depolarization, followed immediately by ventricular contraction. Aortic pressure increases steeply after QRS, as blood is ejected from the ventricles. After reaching peak pressure, aortic pressure decreases as blood runs off into the arteries. The characteristic dicrotic notch appears when the aortic valve closes. Aortic pressure continues to decrease as blood flows out of the aorta. </p>
+<img src="WiggersDiagram_1.png"><br>
+  The fuchsia curve in the figure represents<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. phonogram</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. ventricular pressure</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. atrial pressure</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. ventricular volume</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. atrial volume</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. aortic pressure</label><br>
+</form> 
+Answer: <p style="color:white"> The ECG tracing (green) serves as a reference. Ventricular volume increases slightly with atrial systole (P wave) is constant during isovolumetric contraction (QRS) and then decreases dramatically after the QRS, when blood is ejected from the ventricle.</p>
+  <img src="WiggersDiagram_1.png"><br>
+  The yellow curve in the figure represents<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Aortic pressure </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. ventricular pressure </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. right atrial pressure</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. atrial volume</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. ventricular volume</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. aortic volume </label><br>
+</form> 
+Answer: <p style="color:white"> The ECG tracing (green) serves as a reference. Atrial pressure is marked by the a wave as the right atrium contracts, the c wave as the tricuspid valve bulge into the right atrium, the x descent as the right atrium relaxes, the v wave as the right atrium fills, and the y descent as the ventricle fills. </p>
+<img src="WiggersDiagram_1.png"><br>
+  The blue curve in the figure represents<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Aortic pressure</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Atrial pressure</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Ventricular pressure</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Ventricular volume</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Electrocardiogram</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Sonogram</label><br>
+</form> 
+Answer: <p style="color:white"> The ECG tracing (green) serves as a reference. Ventricular pressure is marked by sharp waves between isovolumetric contraction, ejection, and isovolumetric relaxation.</p>
+  <img src="WiggersDiagram_1.png"><br>
+  The black curve in the diagram represents<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Aortic pressure</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B.Atrial pressure </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Ventricular pressure</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Ventricular volume</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Electrocardiogram</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Sonogram</label><br>
+</form> 
+Answer: <p style="color:white"> The black curve represents a sonogram, with atrioventricular valves causing S1 and semilunar valves causing S2. S3, the muted sound, is a type of gallop rhythm attributed to blood from the atria sloshing between the ventricle walls.</p>
   <b>Regulation of Arterial Pressure</b><br>
 A 66-year-old man with chronic hypertension is treated with prazosin by his physician. The treatment successfully decreases his blood pressure to within the normal range. What is the mechanism of the drug's action?
 <form>
@@ -1313,6 +1424,20 @@ Answer: <p style="color:white"> Orthostatic hypotension is a decrease in arteria
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A. A decrease in blood pressure causes decreased stretch of the carotid sinus baroreceptors and decreased firing of the carotid sinus nerve. In an attempt to restore blood pressure, the parasympathetic outflow to the heart is decreased and sympathetic outflow is increased. As a result, heart rate and contractility will be increased. Mean systemic pressure will increase because of increased sympathetic tone of the veins and a shift of blood to the arteries. </p>
+    An increase in arteriolar resistance, without a change in any other component of the cardiovascular system, will produce <br>
+    <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. A decrease in total peripheral resistance</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B.an increase in capillary filtration </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C.an increase in arterial pressure </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. a decrease in afterload</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> C. An increase in arteriolar resistance will increase total peripheral resistance. Arterial pressure = cardiac output x TPR, so arterial pressure will also increase. Capillary filtration decreases when there is arteriolar constriction because P<sub>c</sub> decreases. Afterload of the heart would be increased by an increase in TPR.</p>
     <b>Microcirculation and Lymph</b><br>
     In a capillary, P<sub>c</sub> is 30mmHg, P<sub>i</sub> is -2mmHg, &pi;<sub>c</sub> is 25mmHg, and &pi;<sub>i</sub> is 2 mmHg. What is the direction of fluid movement and the net driving force? <br>
     <form>
