--- a/physiology.html
+++ b/physiology.html
@@ -1204,7 +1204,35 @@ The following measurements were obtained in a male patient:<br>
 Answer: <p style="color:white"> D. Cardiac output is calculated by the Fick principle if whole body oxygen consumption and [O<sub>2</sub>] in the pulmonary artery and pulmonary vein are measured. Mixed venous blood could substitute for a pulmonary artery sample, and peripheral arterial blood could substitute for a pulmonary vein sample. Central venous pressure and heart rate are not needed for this calculation.<Br>
   Cardiac output = (500mL/min) / (0.24 mL O<sub>2</sub> - 0.16mL O<sub>2</sub>/mL <br>
   6250 mL/min = 6.25L/min</p>
-  
+  <img src="cardiacfx.png"> <br>
+  The long-dashed red line in the figure illustrates the effect of<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Increased total peripheral resistance</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Increased blood volume</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Increased contractility </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. A negative inotropic agent</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Increased mean systemic pressure</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> C. An upward shift of the cardiac output curve is consistent with an increase in myocardial contractility; for any right atrial pressure (sarcomere length) the force of contraction is increased. Such a change causes an increase in stroke volume and cardiac output. Increased blood volume and increased mean systemic pressure are related and would cause a rightward shift in the venous return curve. A negative inotropic agent would cause a decrease in contractility and a downward shift of the cardiac output curve.</p>
+  <img src="cardiacfx.png"> Which of these points represents the normal operating point of the heart?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 2</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 3</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 4</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 5</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> 2 represents the normal operating point of the heart, or the intersection between blood volume and cardiac output. 1 represents the operating point under sympathetic stimulation, 3 represents the operating point under sedation, and 4 represents mean systemic pressure.</p>
   <b>Cardiac Cycle</b><br>
  <img src="https://ccnmtl.columbia.edu/projects/heart/exercises/MechPropHeart/Images/fig_02.gif"><br>
   On the graph showing left ventricular volume and pressure, isovolumetric contraction occurs between points <br>
