--- a/physiology.html
+++ b/physiology.html
@@ -1896,6 +1896,20 @@ Which agent is released or secreted after a hemorrhage and causes an increase in
 Answer: <p style="color:white"> Angiotensin I and aldosterone are increased in response to a decrease in renal perfusion pressure. Angiotensinogen is the precursor for angiotensin I. Antidiuretic hormone is released when atrial receptors detect a decrease in blood volume. Of these, only aldosterone increases Na+ reabsorption. ANP is released in response to an increase in atrial pressure, and an increase in its secretion would not be expected after blood loss.</p>
   <h2>Respiratory Physiology</h2><br>
   <b>Lung Volumes and Capacities</b><br>
+Which of the following lung volumes or capacities can be measured by spirometry? <br>
+ <label for="male"> A. Functional residual capacity</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Physiologic dead space</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Residual volume</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Total lung capacity</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Vital capacity</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white">Residual volume cannot be measured by spirometry. Therefore, any lung volume or capacity that includes the RV cannot be measured by spirometry. Measures that include RV are functional residual capacity and total lung capacity. Vital capacity does not include RV and therefore, is measurable by spirometry. Physiologic dead space is not measurable by spirometry and requires sampling of arterial P<sub>CO2</sub> and expired CO<sub>2</sub></p>
   <b>Mechanics of breathing</b><br>
 Administration of which of the following drugs is contraindicated in a 10 year old child with a history of asthma?
 <form>
@@ -1911,12 +1925,68 @@ Administration of which of the following drugs is contraindicated in a 10 year o
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> E. Asthma, a disease involving increased resistance of the upper airways, is treated by administering drugs that produce bronchiolar dilation (i.e. &beta;<sub>2</sub> agonists). &beta;<sub>2</sub> agonists include isoproterenol, albuterol, epinephrine, and to a lesser degree, norepinephrine. &beta;<sub>2</sub> antagonists, such as propranolol, are strictly contraindicated because they cause constriction of the bronchioles.</p>
+An infant born prematurely in gestational week 25 has neonatal respiratory distress syndrome. Which of the following would be expected in this infant?
+<label for="male"> A. Arterial P<sub>O2</sub> of 100 mmHg</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Collapse of the small alveoli</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Increased lung compliance</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Normal breathing rate</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Lecithin:sphingomyelin ratio of greater than 2:1 in amniotic fluid</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> Neonatal respiratory distress syndrome is caused by lack of adequate surfactant in the immature lung. Surfactant appears between the 24th and 35th gestational week. In the absence of surfactant, the surface tension of the small alveoli is too high. When the pressure on the small alveoli is too high (P = 2T/r) the small alveoli collapse into larger alveoli. There is decreased gas exchange with the larger, collapsed alveoli, and ventilation/perfusion mismatch, hypoxemia, and cyanosis occur. The lack of surfactant also decreases lung compliance, making it harder to inflate the lungs, increasing the work of breathing and producing dyspnea. Generally, lecithin: sphingomyelin ratios greater than 2:1 signify mature levels of surfactant.</p>
   <b>Gas Exchange</b><br>
   <b>Oxygen Transport</b><br>
   <b>CO<sub>2</sub> Transport</b><br>
   <b>Pulmonary Circulation</b><br>
+In which vascular bed does hypoxia cause vasoconstriction?<br>
+ <label for="male"> A. Coronary</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Pulmonary</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Cerebral</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Muscle</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Skin</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> Pulmonary blood flow is controlled locally by the P<sub>O2</sub> of alveolar air. Hypoxia causes pulmonary vasoconstriction and thereby shunts blood away from unventilated areas of the lung, where it would be wasted. In the coronary circulation, hypoxemia causes vasodilation. The cerebral, muscle, and skin circulations are not controlled directly from P<sub>O2</sub>.</p>
   <b>V/Q Defects</b><br>
   <b>Control of Breathing</b><br>
+A 12 yo boy has a severe asthmatic attack with wheezing. He experiences rapid breathing and becomes cyanotic. His arterial P<sub>O2</sub> is 60mmHg and his P<sub>CO2</sub> is 30mmHg. <br>
+<label for="male"> A. FEV<sub>1</sub>/FVC is increased</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. V/Q ratio is increased in the affected areas of his lungs</label><br>
+  <input type="radio" id="C" name="1" value="C">
+<label for="other"> C. His arterial P<sub>CO2</sub> is higher than normal because of inadequate gas exchange</label><br>
+  <input type="radio" id="D" name="1" value="D">
+<label for="other"> D. His arterial P<sub>CO2</sub> is higher than normal because of inadequate gas exchange</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. His RV is decreased</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The patient's arterial P<sub>CO2</sub> is lower than the normal value of 40 mmHg because hypoxemia has stimulated peripheral chemoreceptors to increase his breathing rate. Hyperventilation causes the patient to blow off extra CO<sub>2</sub> and results in respiratory alkalosis. In an obstructive disease, such as asthma, both forced expiratory volume and forced vital capacity are decreased, with the larger decrease occurring in FEV<sub>1</sub> Therefore, the FEV<sub>1</sub>/FVC ratio is decreased. Poor ventilation of the affected areas decreases the V/Q ratio and causes hypoxemia. The RV is increased because he is breathing at a higher lung volume to offset the increased resistance of his airways.</p>
+A 12 yo boy has a severe asthmatic attack with wheezing. He experiences rapid breathing and becomes cyanotic. His arterial P<sub>O2</sub> is 60mmHg and his P<sub>CO2</sub> is 30mmHg. To treat this patient, the physician should administer:<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. an &alpha;<sub>1</sub>-adrenergic antagonist</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. a &beta;<sub>1</sub>-adrenergic antagonist</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. a &beta;<sub>2</sub>-adrenergic agonist</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. a muscarinic agonist</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. a nicotinic agonist</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A cause of airway obstruction in asthma is bronchiolar constriction. &beta;<sub>2</sub>-adrenergic stimulation (&beta;<sub>2</sub>-adrenergic agonists) produces relaxation of the bronchioles.</p>
   <b>Integrated Responses of the Respiratory System</b><br>
   <h2>Renal and Acid-Base Physiology</h2><br>
   <b>Body Fluids</b><br>
