--- a/physiology.html
+++ b/physiology.html
@@ -1910,7 +1910,43 @@ Which of the following lung volumes or capacities can be measured by spirometry?
   <label for="other"> F. </label><br>
 </form>
 Answer: <p style="color:white">Residual volume cannot be measured by spirometry. Therefore, any lung volume or capacity that includes the RV cannot be measured by spirometry. Measures that include RV are functional residual capacity and total lung capacity. Vital capacity does not include RV and therefore, is measurable by spirometry. Physiologic dead space is not measurable by spirometry and requires sampling of arterial P<sub>CO2</sub> and expired CO<sub>2</sub></p>
-  <b>Mechanics of breathing</b><br>
+Which volume remains in the lungs after a tidal volume is expired?
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Tidal volume</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Vital capacity</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Expiratory reserve volume</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Residual volume</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Functional residual capacity</label><br> 
+  <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Inspiratory capacity</label><br>
+  <input type="radio" id="G" name="1" value="G">
+  <label for="other"> G. Total lung capacity </label><br>
+</form> 
+Answer: <p style="color:white"> During normal breathing, the volume inspired and then expired is a tidal volume. The volume remaining in the lungs after expiration of a TV is the FRC.</p>
+  A 35-year-old man has a VC of 5L, a TV of 0.5L, an inspiratory capacity of 3.5L, and an FRC of 2.5L. What is his ERV?
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 4.5L </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 3.9L </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 3.6L </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 3.0L </label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 2.5L </label><br> 
+  <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. 2.0L </label><br>
+  <input type="radio" id="G" name="1" value="G">
+  <label for="other"> G. 1.5L </label><br>
+</form> 
+Answer: <p style="color:white"> ERV = VC - Inspiratory Capacity (TV + IRV) = 5L-3.5L = 1.5L. </p><br>  
+<b>Mechanics of breathing</b><br>
 Administration of which of the following drugs is contraindicated in a 10 year old child with a history of asthma?
 <form>
   <input type="radio" id="A" name="1" value="A">
@@ -1939,9 +1975,68 @@ An infant born prematurely in gestational week 25 has neonatal respiratory distr
   <label for="other"> F. </label><br>
 </form>
 Answer: <p style="color:white"> Neonatal respiratory distress syndrome is caused by lack of adequate surfactant in the immature lung. Surfactant appears between the 24th and 35th gestational week. In the absence of surfactant, the surface tension of the small alveoli is too high. When the pressure on the small alveoli is too high (P = 2T/r) the small alveoli collapse into larger alveoli. There is decreased gas exchange with the larger, collapsed alveoli, and ventilation/perfusion mismatch, hypoxemia, and cyanosis occur. The lack of surfactant also decreases lung compliance, making it harder to inflate the lungs, increasing the work of breathing and producing dyspnea. Generally, lecithin: sphingomyelin ratios greater than 2:1 signify mature levels of surfactant.</p>
-  <b>Gas Exchange</b><br>
+Which of the following is true during inspiration?
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Intrapleural pressure is positive</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. The volume in the lungs is less than the FRC</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Alveolar pressure equals alveolar pressure</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Alveolar pressure is higher than atmospheric pressure</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Intrapleural pressure is more negative than it is during expiration</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> During inspiration, intrapleural pressure becomes more negative than it is at rest or during expiration, when it returnss to its less negative resting value). During inspiration, air flows into the lungs when alveolar pressure becomes lower (due to contraction of the diaphragm) than atmospheric pressure: if alveolar pressure were not lower than atmospheric pressure, air would not flow inward. The volume in the lungs during inspiration is the FRC + one TV.</p><br>
+Which of the following is the site of highest airway resistance? 
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Trachea</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Largest bronchi</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Medium-sized bronchi</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Smallest bronchi</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Alveoli</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> THe medium-sized bronchi actually constitute the site of highest resistance along the bronchial tree. Although the small radii of the alveoli might lead you to think they have the highest resistance, they do not beause of their parallel arrangement. In fact, early changes in resistance in the small airways may be silent and go undetected because of their small overall contribution to resistance.</p><br>
+
+<b>Gas Exchange</b><br>
   <b>Oxygen Transport</b><br>
-  <b>CO<sub>2</sub> Transport</b><br>
+<img src="hemoglobindissociation.png">
+In the hemoglobin-O2 dissociation curves shown above, the right shift could be caused by
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. increased pH</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. decreased 2,3-DPG concentration</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. strenuous exercise</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. fetal hemoglobin</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. CO poisoning</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Strenuous exercise increases the temperature and decreases the pH of skeletal muscle; both effects would cause the Hb-O<sub>2</sub> curve to shift to the right, making it easier to unload O<sub>2</sub> in the tissues to meet the high demand of exercising muscle. 2,3-DPG binds to the &beta; chains of adult Hb and reduces its affinity for O<sub>2</sub> shifting the curve to the right. In fetal hemoglobin, the &beta; chains are replaced by &gamma; chains, which do not bind 2,3-DPG, so the curve is shifted to the left. Because CO increases the affinity of the remaining binding sites for O<sub>2</sub>, the curve is shifted to the left. </p><br>
+<img src="hemoglobindissociation.png">
+The right shift is associated with <br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Increased P<sub>50</sub></label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Increased affinity of Hb for O<sub>2</sub></label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Impaired ability to unload O<sub>2</sub> in the tissues</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Increased O<sub>2</sub> carrying capacity of hemoglobin</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Decreased O<sub>2</sub> carrying capacity of hemoglobin</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A shift to the right of the Hb-O<sub>2</sub> curve represents decreased affinity of hemoglobin for O<sub>2</sub>. At any given P<sub>O2</sub>, the percent saturation is decreased, the P<sub>50</sub> is increased, and unloading of O<sub>2</sub> in the tissues is facilitated. The O<sub>2</sub> carrying capacity of hemoglobin is the mL of O<sub>2</sub> that can be bound to a gram of hemoglobin at 100% saturation and is unaffected by the shift.</p>
+<b>CO<sub>2</sub> Transport</b><br>
   <b>Pulmonary Circulation</b><br>
 In which vascular bed does hypoxia cause vasoconstriction?<br>
  <label for="male"> A. Coronary</label><br>
@@ -1957,7 +2052,37 @@ In which vascular bed does hypoxia cause vasoconstriction?<br>
   <label for="other"> F. </label><br>
 </form>
 Answer: <p style="color:white"> Pulmonary blood flow is controlled locally by the P<sub>O2</sub> of alveolar air. Hypoxia causes pulmonary vasoconstriction and thereby shunts blood away from unventilated areas of the lung, where it would be wasted. In the coronary circulation, hypoxemia causes vasodilation. The cerebral, muscle, and skin circulations are not controlled directly from P<sub>O2</sub>.</p>
-  <b>V/Q Defects</b><br>
+When a person is standing, blood flow in the lungs is <br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. equal at the apex and base</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. highest at the apex owing to the effects of gravity on arterial pressure</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. highest at the base because that is where the difference between arterial and venous pressure is greatest</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. lowest at the base because that is where alveolar pressure is greater than arterial pressure</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> The distribution of blood flow in the lungs is affected by gravitational effects on arterial hydrostatic pressure. Thus, blood flow is highest at the base, where arterial hydrostatic pressure is greatest and the difference between arterial and venous pressure is also greatest. The pressure difference drives the blood flow.</p><br>
+  
+<b>V/Q Defects</b><br>
+A 49-year-old man has a pulmonary embolism that completely blocks blood flow to his left lung. As a result, which of the following will occur?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. V/Q in the left lung will be zero</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Systemic arterial P<sub>O2</sub> will be elevated</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. V/Q ratio in the left lung will be lower than in the right lung</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Alveolar P<sub>O2</sub> in the left lung will be approximately equal to P<sub>O2</sub> in inspired air</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Alveolar P<sub>O2</sub> in the right lung will be approximately equal to the P<sub>O2</sub> in venous blood</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Alveolar P<sub>O2</sub> in the left lung will equal the P<sub>O2</sub> in inspired air. Because there is no blood flow to the left lung, there can be no gas exchange between the alveolar air and the pulmonary capillary blood. Consequently, O<sub>2</sub> is not added to the capillary blood. The V/Q ratio in the left lung will be infinite because perfusion is zero. Systemic arterial P<sub>O2</sub> will, of course, be decreased because the left lung has no gas exchange. Alveolar P<sub>O2</sub> in the right lung is unaffected.</p>
+
   <b>Control of Breathing</b><br>
 A 12 yo boy has a severe asthmatic attack with wheezing. He experiences rapid breathing and becomes cyanotic. His arterial P<sub>O2</sub> is 60mmHg and his P<sub>CO2</sub> is 30mmHg. <br>
 <label for="male"> A. FEV<sub>1</sub>/FVC is increased</label><br>
@@ -1988,6 +2113,7 @@ A 12 yo boy has a severe asthmatic attack with wheezing. He experiences rapid br
 </form> 
 Answer: <p style="color:white"> A cause of airway obstruction in asthma is bronchiolar constriction. &beta;<sub>2</sub>-adrenergic stimulation (&beta;<sub>2</sub>-adrenergic agonists) produces relaxation of the bronchioles.</p>
   <b>Integrated Responses of the Respiratory System</b><br>
+
   <h2>Renal and Acid-Base Physiology</h2><br>
   <b>Body Fluids</b><br>
   <b>Renal Clearance, Renal Blood Flow, and Glomerular Filtration Rate</b><br>
